--- a/website/PCD-website-2020/CMS/content/_shared.yml
+++ b/website/PCD-website-2020/CMS/content/_shared.yml
@@ -1,4 +1,4 @@
-name: Ñame
-profession: Gräphic Designer
+name: PCD Delhi 2020
+group: Processing Community Day
 email: |
-  <hi@yourdomain.com>
+  <delhi@processingindia.org>
