Updated landingpage, and mainly added Aboutpage content

--- a/website/PCD-website-2020/CMS/content/_shared.yml
+++ b/website/PCD-website-2020/CMS/content/_shared.yml
@@ -1,4 +1,10 @@
 name: PCD Delhi 2020
 group: Processing Community Day
-email: |
-  <delhi@processingindia.org>
+email: <delhi@processingindia.org>
+celebrate: A day to celebrate art, code, and diversity —
+date_time: <p>Feb 01, 2020 and Feb 02, 2020 </p> <p>9:30 AM – 2:30 PM IST</p>
+address: Timeblur Studio, D26 (Opp. B9 Gate 3), Bhagwan Mahaveer Road, Vasant Kunj, New Delhi, Delhi 110070
+announcement: Our <a href="?/opencall">OPEN CALL</a> for presenters at Processing Community Day Delhi 2020 is now live! <br>Check out our call and make a submission today!
+core_content_line1: Processing is a free and open-source software platform for learning how to code within the context of the visual arts, created by Casey Reas and Ben Fry. It is complemented by a web version, called p5.js, created by Lauren McCarthy. To date, Processing and p5.js are used by a worldwide community of artists, coders, educators, students.
+core_content_line2: The aim of this community is to make code accessible to diverse communities, and to merge the barriers between Art, Science and Tecnology. On the Day of the event, you'll learn few tricks and play with p5 to add life to a character or to just create beautiful patterns and prints with a machine. No prior coding experience is really required to make it, just a ton of curiosity to learn and understand how programs work?
+
