--- a/website/PCD-website-2020/CMS/content/_shared.yml
+++ b/website/PCD-website-2020/CMS/content/_shared.yml
@@ -2,15 +2,15 @@ name: PCD Delhi 2020
 group: Processing Community Day
 email: <mike@timeblur.io>
 heading: Processing Community Day
-date_time: <p>February 1st and 2nd </p> <p>9:00 am onwards</p>
+date_time: February 1st and 2nd<br>9:00 am onwards
 address: CSIR-IGIB (South Campus)
 address_sub: 11 minute walk from Sukhdev Vihar Metro Station
 bring_these: Laptop and a notepad
-intro: Processing Community Day (PCD) is an initiative to celebrate Art, Code and Diversity, worldwide. PCD Delhi is our bit of contribution to the celebration. This year PCD 2020 our intention is to bring community from Science, Art and Technology together and have a fun discussion, hands-on experience, learn, contribute and collaborate. We welcome artists, educators, hobbyists, creative technologists, scientists, designers, researchers to participate in the two-day event. It could be through giving a talk, showcasing your work or conducting a workshop. Major theme for the two-day event is Evolutionary Algorithm, Tool-building, Computational Art (Art and Code), Ethics and AI, Performance Art, Community led technologies.
+intro: Processing Community Day (PCD) is an initiative to celebrate Art, Code and Diversity, worldwide. PCD Delhi is our bit of contribution to the celebration. This year PCD 2020 our intention is to bring community from Science, Art and Technology together and have a fun discussion, hands-on experience, learn, contribute and collaborate.<br><br>We welcome artists, educators, hobbyists, creative technologists, scientists, designers, researchers to participate in the two-day event. It could be through giving a talk, showcasing your work or conducting a workshop. Major theme for the two-day event is Evolutionary Algorithm, Tool-building, Computational Art (Art and Code), Ethics and AI, Performance Art, Community led technologies.
 talks: Talk about your work, concept, research or other bits related to the theme of PCD 2020. The talk would be not more than 25 minutes and can include a QnA from the audience.
 workshops: We are conducting an hour- long workshop to breakdown few concepts for you and how to work with code. Fill in the form if you’re interested in taking the workshop which is on the theme of PCD 2020.
 showcase: If you’re a student, a practicioner, or have a fun gadget or a project to showcase, we have space for you. Tell us what you’ll need and we will help in installing it for you.
-focused: If you want to be a part of the<br>focused group and learn how to code
+focused: If you want to be a part of the<br>focused group at the event and learn how to code
 themes: //Evolutionary Algorithm //Computation Art (Art and Code) <br>//Ethics and AI //Tool building //Data Visualisation <br>//Community Led technologies
 dayonefirstschedule: 9:00 am<br>Introduction<br><br>10:00 am<br>Talk (Two speakers)<br><br>11:00 am<br>Workshop - Breakdown of two Concepts Orientation - Introducing Themes<br><br>12:00 pm<br>Forming Groups on PCD 2020 themes<br><br>1:00 pm<br>Break for Lunch
 dayonesecondschedule: Extended Workshop<br><br>2:00 pm<br>Focus Group discussions<br><br>5:00 pm<br>Mentoring Sessions<br><br>7:00 pm Break for Tea Performances
