Made layout responsive for mobile viewports

--- a/website/PCD-website-2020/CMS/content/_shared.yml
+++ b/website/PCD-website-2020/CMS/content/_shared.yml
@@ -11,8 +11,8 @@ talks: Talk about your work, concept, research or other bits related to the them
 workshops: We are conducting an hour- long workshop to breakdown few concepts for you and how to work with code. Fill in the form if you’re interested in taking the workshop which is on the theme of PCD 2020.
 showcase: If you’re a student, a practicioner, or have a fun gadget or a project to showcase, we have space for you. Tell us what you’ll need and we will help in installing it for you.
 focused: If you want to be a part of the<br>focused group at the event and learn how to code
-themes: //Evolutionary Algorithm //Computation Art (Art and Code) <br>//Ethics and AI //Tool building //Data Visualisation <br>//Community Led technologies
-dayonefirstschedule: 9:00 am<br>Introduction<br><br>10:00 am<br>Talk (Two speakers)<br><br>11:00 am<br>Workshop - Breakdown of two Concepts Orientation - Introducing Themes<br><br>12:00 pm<br>Forming Groups on PCD 2020 themes<br><br>1:00 pm<br>Break for Lunch
-dayonesecondschedule: Extended Workshop<br><br>2:00 pm<br>Focus Group discussions<br><br>5:00 pm<br>Mentoring Sessions<br><br>7:00 pm Break for Tea Performances
-daytwofirstschedule: 9:00 am<br>Problem Solving Session<br><br>10:00 am<br>Talk (Two Speakers)<br><br>11:00 am Workshop<br><br>1:00 pm<br>Break for Lunch
-daytwosecondschedule: 2:00 pm<br>Focus Group continues<br><br>5:00 pm<br>Open-Community Discussion<br><br>6:00 pm<br>Making a Repository of the Collective Work (Google form)<br><br>7:00 pm<br>Wrap up and Group Pictures
+themes: <span class="col three">// Evolutionary Algorithm</span><span class="col three">// Computation Art</span><br><span class="col three">// Ethics and AI</span><span class="col three">// Tool building</span><span class="col three">// Data Visualisation</span><br><span class="col three">// Community Led technologies</span>
+dayonefirstschedule: 9:00 am<br>Introduction<br><br>10:00 am<br>Talk (Two speakers)<br><br>11:00 am<br>Workshop - Breakdown of two Concepts<br>Orientation - Introducing Themes<br><br>12:00 pm<br>Forming Groups on PCD 2020 themes<br><br>1:00 pm<br>Break for Lunch
+dayonesecondschedule: Extended Workshop<br><br>2:00 pm<br>Focus Group discussions<br><br>5:00 pm<br>Mentoring Sessions<br><br>7:00 pm<br>Break for Tea & Performances
+daytwofirstschedule: 9:00 am<br>Problem Solving Session<br><br>10:00 am<br>Talk (Two Speakers)<br><br>11:00 am<br>Workshop<br><br>1:00 pm<br>Break for Lunch
+daytwosecondschedule: 2:00 pm<br>Focus Group continues<br><br>5:00 pm<br>Open-Community Discussion<br><br>6:00 pm<br>Making a Repository of the Collective Work<br>(Google form)<br><br>7:00 pm<br>Wrap up and Group Pictures
